--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,8 +1,28 @@
 <div class="container">
   <div class="row">
-    <div class="col-12">
-      <h1 class="text-center mt-4">To Do List</h1>
-      <div class="row" id="tasks"></div>
+    <div class="col-xs-12">
+      <h2 id="title" class="text-center">To Do List</h2>
+      <div class="row">
+        <div class='col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3'>
+          <div id="todo-list-wrapper">
+            <div id="input-wrapper">
+              <span id="toggle-all"></span>
+              <input id='task-input' class="form-control" placeholder='Enter New Task' autocomplete="off">
+            </div>
+            <div id='todo-list'>
+            </div>
+            <div id="footer">
+              <span><span id="active-tasks"></span> Items Left</span>
+              <ul>
+                <li class="filter-button" id="All">All</li>
+                <li class="filter-button" id="Active">Active</li>
+                <li class="filter-button" id="Completed">Completed</li>
+              </ul>
+              <span id="clear-completed">Clear completed</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
