--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,8 +6,8 @@
         <div class='col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3'>
           <div id="todo-list-wrapper">
             <div id="input-wrapper">
-              <span id="toggle-all"></span>
               <input id='task-input' class="form-control" placeholder='Enter New Task' autocomplete="off">
+              <button id="addTask">Add</button>
             </div>
             <div id='todo-list'>
             </div>
